test_data/end_to_end/err__resolve_struct_field/stderr.txt
error: unknown field `0` on type `bool`
  --> main.cz:2:10
2 |     true.0;
             ~

error: mismatching return types: function `f1::()` expects `u32`, found `{}`
  --> main.cz:2:11
2 |     true.0;
              ~

error: unknown field `field` on type `?integer`
  --> main.cz:6:10
6 |     {42}.field
             ~~~~~

error: unknown field `bad` on type `{}`
  --> main.cz:10:8
10 |     {}.bad;
            ~~~

error: unknown field `42` on type `{}`
  --> main.cz:14:8
14 |     {}.42
            ~~

error: unknown field `bad` on type `{?integer,}`
  --> main.cz:18:11
18 |     {42,}.bad;
               ~~~

error: unknown field `42` on type `{?integer,}`
  --> main.cz:22:11
22 |     {42,}.42;
               ~~

error: unknown field `bad` on type `{foo: ?integer}`
  --> main.cz:26:15
26 |     {foo: 42}.bad;
                   ~~~

error: unknown field `42` on type `{foo: ?integer}`
  --> main.cz:30:15
30 |     {foo: 42}.42;
                   ~~

error: unknown field `bad` on type `Foo`
  --> main.cz:35:19
35 |     Foo {foo: 42}.bad;
                       ~~~

error: unknown field `42` on type `Foo`
  --> main.cz:40:19
40 |     Foo {foo: 42}.42;
                       ~~

error: unknown field `bad` on type `Foo`
  --> main.cz:45:14
45 |     Foo {42}.bad;
                  ~~~

error: unknown field `42` on type `Foo`
  --> main.cz:50:15
50 |     Foo {42,}.42;
                   ~~
